--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -14,20 +14,20 @@ body {
 
 :root {
     --tamanho-header: 80px;
-    --tamanho-banner: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
+    --tamanho-banner: calc(50vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
     --tamanho-login: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
-    --tamanho-footer: 65px;
+    --tamanho-footer: 120px;
 
 }
 
 .header {
     height: var(--tamanho-header);
-    border-bottom: 2px solid #32b9cd;
+    border-bottom: 6px solid #32b9cd;
 }
 
 .container {
     display: flex;
-    width: 80%;
+    width: 90%;
     margin: auto;
 
 }
@@ -41,7 +41,7 @@ body {
 /* hierariquia de componentes, dentro da class header, a tag a terá essa estilização*/
 .header a {
     text-decoration: none;
-    color: #e3b062;
+    color: #ffffff;
 }
 
 .agora {
@@ -60,7 +60,7 @@ body {
 .titulo {
     color: #32b9cd;
     width: fit-content;
-    font-weight: 800;
+    font-weight: 500;
 }
 
 .banner {
@@ -98,18 +98,29 @@ body {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 30px 0;
+    padding: 5vh 45vh 5vh 45vh ;
+    flex-direction: column;
+
 }
 
 .box {
     display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+
+}
+
+.minibox{
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 .box img {
     width: 170px;
 }
+
 
 /*FOOTER*/
 
@@ -128,6 +139,7 @@ body {
 
 .version {
     font-size: 12px;
+    margin-bottom: 45px;
 }
 
 /* inicio pagina login */
